<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/fifty_dp"
        android:background="@android:color/black"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/setting_back"
            android:layout_width="@dimen/thirty_dp"
            android:layout_height="match_parent"
            android:layout_marginBottom="@dimen/ten_dp"
            android:layout_marginLeft="@dimen/ten_dp"
            android:layout_marginTop="@dimen/ten_dp"
            android:background="@mipmap/video_lan_back" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/setting"
            android:textColor="@android:color/white"
            android:textSize="@dimen/twenty_sp" />
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/one_dp"
                android:layout_marginTop="@dimen/ten_dp"
                android:background="@color/halving_line" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/white"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/setting_user_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/ten_dp"
                    android:layout_marginLeft="@dimen/twenty_dp"
                    android:layout_marginTop="@dimen/ten_dp"
                    android:background="@mipmap/ic_launcher" />

                <TextView
                    android:id="@+id/setting_user_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="@dimen/ten_dp"
                    android:layout_toRightOf="@id/setting_user_icon"
                    android:text="username"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/seventeen_sp" />

                <Button
                    android:id="@+id/setting_user_back"
                    android:layout_width="@dimen/sixty_dp"
                    android:layout_height="@dimen/thirty_dp"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="@dimen/ten_dp"
                    android:background="@android:color/holo_red_light"
                    android:text="@string/back"
                    android:textColor="@android:color/white" />
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/one_dp"
                android:background="@color/halving_line" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/one_dp"
                android:layout_marginTop="@dimen/twenty_dp"
                android:background="@color/halving_line" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/sixty_dp"
                android:background="@android:color/white">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="@dimen/twenty_dp"
                    android:text="@string/user_feedback"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/fifteen_sp" />

                <ImageView
                    android:layout_width="@dimen/ten_dp"
                    android:layout_height="@dimen/fifteen_dp"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_margin="@dimen/ten_dp"
                    android:background="@mipmap/arrows_r" />
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/one_dp"
                android:layout_marginLeft="@dimen/twenty_dp"
                android:background="@color/halving_line" />

            <RelativeLayout
                android:id="@+id/setting_clear_cache_rl"
                android:layout_width="match_parent"
                android:layout_height="@dimen/sixty_dp"
                android:background="@android:color/white">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="@dimen/twenty_dp"
                    android:text="@string/clear_picture_cache"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/fifteen_sp" />

                <TextView
                    android:id="@+id/setting_cache_textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="@dimen/forty_dp"
                    android:textColor="@android:color/black" />

                <ImageView
                    android:layout_width="@dimen/ten_dp"
                    android:layout_height="@dimen/fifteen_dp"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_margin="@dimen/ten_dp"
                    android:background="@mipmap/arrows_r" />
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/one_dp"
                android:layout_marginLeft="@dimen/twenty_dp"
                android:background="@color/halving_line" />

            <RelativeLayout
                android:id="@+id/setting_play_rl"
                android:layout_width="match_parent"
                android:layout_height="@dimen/sixty_dp"
                android:background="@android:color/white">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="@dimen/twenty_dp"
                    android:text="@string/play_setting"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/fifteen_sp" />

                <ImageView
                    android:layout_width="@dimen/ten_dp"
                    android:layout_height="@dimen/fifteen_dp"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_margin="@dimen/ten_dp"
                    android:background="@mipmap/arrows_r" />
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/one_dp"
                android:layout_marginLeft="@dimen/twenty_dp"
                android:background="@color/halving_line" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/sixty_dp"
                android:background="@android:color/white">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="@dimen/twenty_dp"
                    android:text="@string/allow_no_wifi"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/fifteen_sp" />

                <Switch
                    android:id="@+id/setting_allowWIFI_switch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_margin="@dimen/ten_dp" />
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/one_dp"
                android:layout_marginLeft="@dimen/twenty_dp"
                android:background="@color/halving_line" />

            <RelativeLayout
                android:id="@+id/setting_storage_rl"
                android:layout_width="match_parent"
                android:layout_height="@dimen/sixty_dp"
                android:background="@android:color/white">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="@dimen/twenty_dp"
                    android:text="@string/unWIFI_cache_setting"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/fifteen_sp" />

                <TextView
                    android:id="@+id/setting_storage_content"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="@dimen/forty_dp"
                    android:text="@string/phone_store"
                    android:textColor="@android:color/black" />

                <ImageView
                    android:layout_width="@dimen/ten_dp"
                    android:layout_height="@dimen/fifteen_dp"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_margin="@dimen/ten_dp"
                    android:background="@mipmap/arrows_r" />
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/one_dp"
                android:layout_marginLeft="@dimen/twenty_dp"
                android:background="@color/halving_line" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/sixty_dp"
                android:background="@android:color/white">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="@dimen/twenty_dp"
                    android:text="@string/rating_to_movie"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/fifteen_sp" />

                <ImageView
                    android:layout_width="@dimen/ten_dp"
                    android:layout_height="@dimen/fifteen_dp"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_margin="@dimen/ten_dp"
                    android:background="@mipmap/arrows_r" />
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/one_dp"
                android:layout_marginLeft="@dimen/twenty_dp"
                android:background="@color/halving_line" />

            <RelativeLayout
                android:id="@+id/setting_version_update_rl"
                android:layout_width="match_parent"
                android:layout_height="@dimen/sixty_dp"
                android:background="@android:color/white">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="@dimen/twenty_dp"
                    android:text="@string/version_update"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/fifteen_sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="@dimen/forty_dp"
                    android:text="@string/v5_0_9_build_99"
                    android:textColor="@android:color/black" />

                <ImageView
                    android:layout_width="@dimen/ten_dp"
                    android:layout_height="@dimen/fifteen_dp"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_margin="@dimen/ten_dp"
                    android:background="@mipmap/arrows_r" />
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/one_dp"
                android:layout_marginLeft="@dimen/twenty_dp"
                android:background="@color/halving_line" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>