<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="match_parent">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="@dimen/two_hundred_sixty_dp"
                android:background="@mipmap/login_bg"
                />
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <com.example.dllo.vmovie.customview.StereoView
                    android:id="@+id/stereoView"
                    android:layout_width="@dimen/three_hundred_dp"
                    android:layout_height="@dimen/sixty_dp"
                    android:layout_marginTop="@dimen/eighty_dp"
                    android:layout_centerHorizontal="true"
                    >
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/bg_white"
                        android:focusable="true"
                        android:focusableInTouchMode="true"
                        android:gravity="center_vertical"
                        android:paddingLeft="@dimen/twenty_dp">

                        <ImageView
                            android:layout_width="@dimen/twenty_five_dp"
                            android:layout_height="@dimen/twenty_five_dp"
                            android:background="@mipmap/icon_password"/>

                        <EditText
                            android:id="@+id/et_password"
                            android:layout_width="@dimen/one_hundred_eighty_dp"
                            android:layout_height="@dimen/fifty_dp"
                            android:layout_marginLeft="@dimen/ten_dp"
                            android:background="@null"
                            android:hint="@string/password_login"
                            android:inputType="textPassword"
                            android:textColorHint="@color/font_gray"/>

                        <com.example.dllo.vmovie.customview.RippleView
                            android:id="@+id/rv_password"
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/sixty_dp"
                            android:paddingLeft="@dimen/ten_dp"
                            app:normal="@mipmap/icon_next_gray"
                            app:pressed="@mipmap/icon_next"/>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/bg_white"
                        android:focusable="true"
                        android:focusableInTouchMode="true"
                        android:gravity="center_vertical"
                        android:paddingLeft="@dimen/twenty_dp">

                        <ImageView
                            android:layout_width="@dimen/twenty_five_dp"
                            android:layout_height="@dimen/twenty_five_dp"
                            android:background="@mipmap/icon_user"/>

                        <EditText
                            android:id="@+id/et_username"
                            android:layout_width="@dimen/one_hundred_eighty_dp"
                            android:layout_height="@dimen/fifty_dp"
                            android:layout_marginLeft="@dimen/ten_dp"
                            android:singleLine="true"
                            android:background="@null"
                            android:hint="@string/username_login"
                            android:textColorHint="@color/font_gray"
                            android:textSize="@dimen/eighteen_sp"/>

                        <com.example.dllo.vmovie.customview.RippleView
                            android:id="@+id/rv_username"
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/sixty_dp"
                            android:paddingLeft="@dimen/ten_dp"
                            app:normal="@mipmap/icon_next_gray"
                            app:pressed="@mipmap/icon_next"/>

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/ly_welcome"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/bg_white"
                        android:focusable="true"
                        android:focusableInTouchMode="true"
                        android:gravity="center_vertical"
                        android:paddingLeft="@dimen/twenty_dp">

                        <ImageView
                            android:layout_width="@dimen/twenty_five_dp"
                            android:layout_height="@dimen/twenty_five_dp"
                            android:background="@mipmap/icon_love"/>

                        <TextView
                            android:id="@+id/tv_welcome"
                            android:layout_width="@dimen/one_hundred_eighty_dp"
                            android:layout_height="@dimen/fifty_dp"
                            android:layout_marginLeft="@dimen/ten_dp"
                            android:background="@null"
                            android:singleLine="true"
                            android:gravity="center"
                            android:hint="@string/you_are_welcome"
                            android:textColorHint="@color/font_gray"
                            android:textSize="@dimen/eighteen_sp"/>

                        <com.example.dllo.vmovie.customview.RippleView
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/sixty_dp"
                            android:paddingLeft="@dimen/ten_dp"
                            app:normal="@mipmap/icon_love"/>
                    </LinearLayout>

                </com.example.dllo.vmovie.customview.StereoView>
                <RelativeLayout
                    android:id="@+id/relative_login_other"
                    android:layout_width="@dimen/two_hundred_eighty_five_dp"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/stereoView"
                    android:layout_marginTop="@dimen/eighty_dp"
                    android:layout_centerHorizontal="true"
                    >
                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/zero_point_five_dp"
                        android:background="@android:color/darker_gray"
                        android:layout_centerVertical="true"
                        android:layout_toLeftOf="@+id/tv_login_read"
                        />
                    <TextView
                        android:id="@+id/tv_login_read"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/use_other_login"
                        android:layout_centerHorizontal="true"
                        />
                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/zero_point_five_dp"
                        android:background="@android:color/darker_gray"
                        android:layout_centerVertical="true"
                        android:layout_toRightOf="@+id/tv_login_read"
                        />
                </RelativeLayout>
                <ImageView
                    android:id="@+id/iv_login_tencent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@mipmap/login_icon1"
                    android:layout_centerHorizontal="true"
                    android:layout_below="@+id/relative_login_other"
                    android:layout_marginTop="@dimen/thirty_dp"
                    />
                <ImageView
                    android:id="@+id/iv_login_sina"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@mipmap/login_icon3"
                    android:layout_below="@+id/relative_login_other"
                    android:layout_toLeftOf="@+id/iv_login_tencent"
                    android:layout_alignTop="@+id/iv_login_tencent"
                    android:layout_marginRight="@dimen/eighty_dp"
                    />
                <ImageView
                    android:id="@+id/iv_login_wechat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@mipmap/login_icon2"
                    android:layout_toRightOf="@+id/iv_login_tencent"
                    android:layout_below="@+id/relative_login_other"
                    android:layout_alignTop="@+id/iv_login_tencent"
                    android:layout_marginLeft="@dimen/eighty_dp"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/vmovie"
                    android:layout_centerHorizontal="true"
                    android:layout_alignParentBottom="true"
                    android:layout_below="@+id/iv_login_tencent"
                    android:layout_marginTop="@dimen/twenty_dp"
                    />
            </RelativeLayout>
        </LinearLayout>

    </ScrollView>

    <ImageView
        android:id="@+id/iv_login_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@mipmap/btn_back"
        android:layout_marginLeft="@dimen/fifteen_dp"
        android:layout_marginTop="@dimen/fifteen_dp"
        />

</RelativeLayout>